# SolTix

./: .env.example  Anchor.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  ROADMAP.md  SOLANA_SETUP.md  SOLIDITY_VS_SOLANA.md  WINDOWS_INSTALL.md  app.json  eas.json  package-lock.json  package.json  tmp_event_service.txt
app/: +not-found.tsx  _layout.tsx  landing.tsx
app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  marketplace.tsx  settings.tsx
app/event/: [id].tsx
app/idl/: soltix_program.json
app/resale/: [id].tsx
components/: event-card.tsx  wallet-modal.tsx
data/: mock-data.ts
docs/: index.html
programs/soltix-program/: Cargo.toml
programs/soltix-program/src/: lib.rs
scripts/: generate-app-assets.ps1  import-wallet.js
services/: event-service.ts  marketplace-service.ts  profile-service.ts  program.ts  supabase.ts  ticket-service.ts  wallet-service.ts
store/: marketplace-store.ts  wallet-store.ts
supabase/: fix_invalid_organizer_wallets.sql  seed.sql
tests/: soltix-program.ts
~/.config/solana/: id.json
