[package]
name = "soltix-program"
version = "0.1.0"
description = "Solana NFT Ticketing System with Resale Controls and Royalties"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soltix_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2"
solana-program = "1.18"

[dev-dependencies]
solana-program-test = "1.18"
